# plasma-gsfno

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml
configs/model/: default.yaml
configs/train/: default.yaml
deploy/runpod/: setup_runpod.sh  train_and_eval.sh
gsfno/: __init__.py  model.py  physics.py  units.py
gsfno/data/: dataset.py  generator.py  real.py
results/: eval_test.json
scripts/: benchmark.py  evaluate.py  generate_dataset.py  plot_prediction.py  train.py
tests/: test_dataset.py  test_generator.py  test_model.py  test_physics.py  test_real.py  test_units.py
