[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plasma-gsfno"
version = "0.1.0"
description = "Grad-Shafranov FNO surrogate for tokamak MHD equilibria"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "FlashyFlash3011" }]

dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "h5py>=3.9",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3",
    "tqdm>=4.66",
    "scipy>=1.12",
]

[project.optional-dependencies]
gw = [
    "freegsfne",
    "omas",
    "MDSplus",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]

[project.entry-points."solaris.models"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gsfno*", "scripts*"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
